--- a/bj-server/build.gradle
+++ b/bj-server/build.gradle
@@ -27,6 +27,11 @@ dependencies {
     //implementation 'com.google.guava:guava:20.0'
     
     compile("org.springframework.boot:spring-boot-starter-web")
+    compile group: 'org.springframework.session', name: 'spring-session-jdbc', version: '1.3.0.RELEASE'
+    compile group: 'hsqldb', name: 'hsqldb', version: '1.8.0.10'
+    compile group: 'org.springframework', name: 'spring-orm', version: '4.3.6.RELEASE'
+    compile group: 'org.hibernate', name: 'hibernate-core', version: '5.2.8.Final'
+    compile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.2.2' 
     providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 
     // Use JUnit test framework
