--- a/bj-server/build.gradle
+++ b/bj-server/build.gradle
@@ -31,8 +31,9 @@ dependencies {
     compile group: 'hsqldb', name: 'hsqldb', version: '1.8.0.10'
     compile group: 'org.springframework', name: 'spring-orm', version: '4.3.6.RELEASE'
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.2.8.Final'
-    compile group: 'commons-dbcp', name: 'commons-dbcp', version: '1.2.2' 
     providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
+    
+    testCompile group: 'org.springframework', name: 'spring-test', version: '4.3.6.RELEASE'
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
