--- a/bj-server/src/main/resources/application.properties
+++ b/bj-server/src/main/resources/application.properties
@@ -1,13 +1,9 @@
-# jdbc.X
-jdbc.driverClassName=org.hsqldb.jdbc.JDBCDriver
-jdbc.url=jdbc:hsqldb:file:~/cyb-example-db
-jdbc.user=sa
-jdbc.pass=
 spring.datasource.url=jdbc:hsqldb:file:~/cyb-example-db
 spring.datasource.username=sa
 spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
+spring.datasource.password=
 
-# hibernate.X
+
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
-hibernate.show_sql=false
+hibernate.show_sql=faltruese
 hibernate.hbm2ddl.auto=create
