--- a/bj-server/build.gradle
+++ b/bj-server/build.gradle
@@ -31,6 +31,9 @@ dependencies {
     compile group: 'hsqldb', name: 'hsqldb', version: '1.8.0.10'
     compile group: 'org.springframework', name: 'spring-orm', version: '4.3.6.RELEASE'
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.2.8.Final'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-logging', version: '1.5.1.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-test-autoconfigure', version: '1.5.1.RELEASE'
+    
     providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
     
     testCompile group: 'org.springframework', name: 'spring-test', version: '4.3.6.RELEASE'
