--- a/bj-server/src/main/resources/application.properties
+++ b/bj-server/src/main/resources/application.properties
@@ -5,5 +5,12 @@ spring.datasource.password=
 
 
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
-hibernate.show_sql=faltruese
+hibernate.show_sql=true
 hibernate.hbm2ddl.auto=create
+
+
+logging.level.=DEBUG
+
+
+logging.pattern.console= "%d{yyyy-MM-dd HH:mm:ss} - %msg%n"
+#logging.file=${java.io.tmpdir}/application.log
