initial login test and DTO

--- a/bj-client/build.gradle
+++ b/bj-client/build.gradle
@@ -7,7 +7,9 @@
  */
 
 // Apply the java-library plugin to add support for Java Library
-apply plugin: 'java-library'
+apply plugin: 'java'
+apply plugin: 'eclipse'
+
 apply from: 'http://dl.bintray.com/content/shemnon/javafx-gradle/8.1.1/javafx.plugin'
 
 // In this section you declare where to find the dependencies of your project
@@ -27,6 +29,6 @@ dependencies {
     runtime files('libs/jfxrt.jar')
 
     // Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
+    testCompile 'junit:junit:4.12'
 }
 
