--- a/bj-server/src/main/resources/application.properties
+++ b/bj-server/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:hsqldb:file:~/cyb-example-db
+spring.datasource.url=jdbc:hsqldb:file:#{systemProperties['java.io.tmpdir']}/cyb-example-db
 spring.datasource.username=sa
 spring.datasource.driver-class-name=org.hsqldb.jdbcDriver
 spring.datasource.password=
