--- a/bj-server/src/main/resources/application.properties
+++ b/bj-server/src/main/resources/application.properties
@@ -8,6 +8,8 @@ hibernate.dialect=org.hibernate.dialect.HSQLDialect
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=create
 
+bjapp.packagesToScan=com.cybernetica.bj.server
+
 
 logging.level.=DEBUG
 
