--- a/bj-client/build.gradle
+++ b/bj-client/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     compile group: 'javax.validation', name: 'validation-api', version: '1.1.0.Final'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.1'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
     
     runtime files('libs/jfxrt.jar')
 
