--- a/bj-client/build.gradle
+++ b/bj-client/build.gradle
@@ -25,7 +25,7 @@ dependencies {
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     //implementation 'com.google.guava:guava:20.0'
-    compile group: 'javax.validation', name: 'validation-api', version: '1.1.0.Final'
+    //compile group: 'javax.validation', name: 'validation-api', version: '1.1.0.Final'
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.1'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
