approach to security

--- a/bj-server/build.gradle
+++ b/bj-server/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile group: 'org.springframework', name: 'spring-orm', version: '4.3.6.RELEASE'
     compile group: 'org.hibernate', name: 'hibernate-core', version: '5.2.8.Final'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-logging', version: '1.5.1.RELEASE'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '1.5.1.RELEASE'
     compile group: 'org.springframework.boot', name: 'spring-boot-test-autoconfigure', version: '1.5.1.RELEASE'
     
     compile group: 'org.apache.tomcat', name: 'tomcat-jdbc', version: '8.5.11'
