--- a/bj-client/build.gradle
+++ b/bj-client/build.gradle
@@ -29,10 +29,12 @@ dependencies {
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
     compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.1'
     compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.5'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.7'
     
     runtime files('libs/jfxrt.jar')
 
     // Use JUnit test framework
     testCompile 'junit:junit:4.12'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '2.0.2-beta'
 }
 
