--- a/bj-server/src/main/resources/application.properties
+++ b/bj-server/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.password=
 
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
 hibernate.show_sql=true
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=update
 
 bjapp.packagesToScan=com.cybernetica.bj.server
 
