--- a/bj-common/build.gradle
+++ b/bj-common/build.gradle
@@ -22,6 +22,8 @@ repositories {
 dependencies {
     // This dependency is exported to consumers, that is to say found on their compile classpath.
     //api 'org.apache.commons:commons-math3:3.6.1'
+    
+     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.8.7'
 
 
     // Use JUnit test framework
