--- a/bj-server/build.gradle
+++ b/bj-server/build.gradle
@@ -44,5 +44,6 @@ dependencies {
     
     testCompile group: 'org.springframework', name: 'spring-test', version: '4.3.6.RELEASE'
     testCompile 'junit:junit:4.12'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '2.0.2-beta'
 }
 
