--- a/bj-server/src/main/resources/application.properties
+++ b/bj-server/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.password=
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
 hibernate.show_sql=true
 hibernate.hbm2ddl.auto=update
+#hibernate.hbm2ddl.auto=create-drop
 
 bjapp.packagesToScan=com.cybernetica.bj.server
 
