--- a/bj-client/src/main/resources/application.properties
+++ b/bj-client/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+#backend host
 app.backend.host=http://localhost:8080
+
+#minimum amount to play
+app.game.play-minimum=5.0
+
+#bet step
+app.game.bet.amount=5.0
